<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MacroActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">
        <!--M0-->
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"

            android:text="@string/macro_0"

            android:onClick="SendMacro"/>
        <!--M1-->
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"

            android:text="@string/macro_1"

            android:onClick="SendMacro"/>
        <!--M2-->
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"

            android:text="@string/macro_2"

            android:onClick="SendMacro"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">
        <!--M3-->
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"

            android:text="@string/macro_3"

            android:onClick="SendMacro"/>
        <!--M4-->
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"

            android:text="@string/macro_4"

            android:onClick="SendMacro"/>
        <!--M5-->
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"

            android:text="@string/macro_5"

            android:onClick="SendMacro"/>
    </LinearLayout>


</LinearLayout>
